--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,6 +9,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: $main-font;
+    overflow-x: hidden;
 }
 
 code {
